workloads/ntfy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      annotations:
        checksum/config: 1c6fa275e28731699e27419c3a68c874e86413abd795f275605a26d838d845de
        checksum/secret: fc77f61c1554553b628027a9cb323142aed8a3c382112c8b9c8f1722ad1e688d
      labels:
        app: ntfy
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy
          args: ["serve"]
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: http
              containerPort: 80
            - name: metrics
              containerPort: 9090
          volumeMounts:
            - name: config
              mountPath: /etc/ntfy
              readOnly: true
            - name: data
              mountPath: /var/cache/ntfy
      volumes:
        - name: config
          configMap:
            name: ntfy
        - name: data
          persistentVolumeClaim:
            claimName: ntfy-pvc
