workloads/ntfy/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ntfy
spec:
  hosts:
    - ntfy.lth.so
  gateways:
    - istio-ingress/public-gateway
  http:
    - route:
        - destination:
            host: ntfy-service.ntfy.svc.cluster.local
            port:
              number: 80
      headers:
        response:
          set:
            Strict-Transport-Security: max-age=31536000; includeSubDomains
